feat: update documentation for JDK 21 support and JavaParser integration in s2jdbc-gen